<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item
        android:id="@+id/meniu_list"
        app:showAsAction="ifRoom"
        android:title=""
        android:icon="@drawable/baseline_menu_24">

        <menu>
            <item
                android:id="@+id/meniu_adaugareNota"
                android:title="@string/meniu_adaugareNota"
                app:showAsAction="never">
            </item>

            <item
                android:id="@+id/meniu_vizulizareNote"
                android:title="@string/meniu_vizualizareNote"
                app:showAsAction="never">
            </item>

            <item
                android:id="@+id/meniu_despre"
                android:title="@string/meniu_despre"
                app:showAsAction="never">
            </item>
        </menu>

    </item>

</menu>